--- a/WebApiTestToDo/index.html
+++ b/WebApiTestToDo/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Search hotels</title>
+    <title>Search hotelss</title>
     <link rel="stylesheet" type="text/css" media="screen" href="http://www.trirand.com/blog/jqgrid/themes/redmond/jquery-ui-custom.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="http://www.trirand.com/blog/jqgrid/themes/ui.jqgrid.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="http://www.trirand.com/blog/jqgrid/themes/ui.multiselect.css" />
@@ -36,7 +36,7 @@
 </head>
 <body>
 
-<table id="mainsearch" style="width:100%;height:250px; background-size: cover; text-align:center;background-image:url(http://www.lowestroomrates.com/images/27528_351_z.jpg)">
+<table id="mainsearch" style="width:100%;height:250px; background-size: cover; text-align:center;background-image:url(/App_Data/images/27528_351_z.jpg)">
     <tr>
         <td align="center" valign="middle"  style="top:50px;position:relative">
          <div class="mainsearchdiv">
