--- a/WebApiTestToDo/index.html
+++ b/WebApiTestToDo/index.html
@@ -36,7 +36,7 @@
 </head>
 <body>
 
-<table id="mainsearch" style="width:100%;height:250px; background-size: cover; text-align:center;background-image:url(/App_Data/images/27528_351_z.jpg)">
+<table id="mainsearch" style="width: 100%; height: 250px; background-size: cover; text-align: center; background-image: url('App_Data/images/27528_351_z.jpg'); ">
     <tr>
         <td align="center" valign="middle"  style="top:50px;position:relative">
          <div class="mainsearchdiv">
