--- a/WebApiTestToDo/index.html
+++ b/WebApiTestToDo/index.html
@@ -76,8 +76,8 @@
 
 
                 <input type="button" value="Search" class="searchbtn" onclick="findHotel()" />
-                <input type="button" value="More info" class="searchbtn" onclick="findHotelDetails('12345', 'London')" />
-                <a   class="searchbtn" target="_blank" href="api/hotels/114200/London">See details</a>
+                <a   class="searchbtn" target="_blank" href="api/hotels/114200/London">test basic</a>
+                <a class="searchbtn" target="_blank" href="api/hotels/114200/London/GB">test digest</a>
             </div>
           </div>
         </td>
