--- a/WebApiTestToDo/Sample/index.html
+++ b/WebApiTestToDo/Sample/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html ng-app="GuitarApp">
 <head>
 	<meta charset="UTF-8">
@@ -11,14 +11,13 @@
 	<script src="js/controllers.js" type="text/javascript" ></script>
 </head>
 <body>
-	
+	 
 <div class="main" ng-view>
 	 
 	 <!-- everthing here was gone to list.html file inside partials folder -->
 
 </div>
+     
 
-
-<a class="developer" href="http://blog.hfarazm.com/category/angular-js">&laquo; Goto developer's blog </a>
 </body>
 </html>
