--- a/WebApiTestToDo/indexAngTests.html
+++ b/WebApiTestToDo/indexAngTests.html
@@ -1,4 +1,4 @@
-﻿<html ng-app="scotchApp">
+﻿<html>
 <head>
 
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.js"></script>
